force-app/main/default/objects/LiveMatchEvent__e/LiveMatchEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event fan-out for live match snapshots. Published by the live-ingest Cloud Run service whenever a goal/card/sub fires; the second-screen LWC subscribes to refresh the score strip.</description>
    <label>Live Match Event</label>
    <pluralLabel>Live Match Events</pluralLabel>
</CustomObject>