force-app/main/default/objects/LiveMatchEvent__e/fields/FixtureLabel__c.field-meta.xml
<CustomField>
    <fullName>FixtureLabel__c</fullName>
    <label>Fixture Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>