force-app/main/default/objects/LiveMatchEvent__e/fields/MatchId__c.field-meta.xml
<CustomField>
    <fullName>MatchId__c</fullName>
    <label>Match Id</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>